...
    <!-- Exercise Session screen -->
    <string name="insert_exercise_session">Insert session</string>
    <string name="refresh">Refresh</string>
    <string name="add_friend">Add friend</string>
    <string name="no_title">[No title]</string>
    <string name="unknown_app">[Unknown app]</string>
    <string name="delete_button">Delete</string>
    <string name="duration">duration</string>
    <string name="distance">distance in Km</string>
    <string name="points">points</string>
    <string name="Kilometers">Km</string>
    <string name="summary_layout">%1$s %2$s</string>
    <string name="nothing" />
...
